@@ -1,3 +1,4 @@
+9/8/14 use {Object} instead of {*} as type expression for options param
 8/19/14 #50 fix drag bounds of pH meter
 # 1.1 branched 8/19/14
 7/29/14 check in ph-scale-128.png (website thumbnail)
